--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "plugins": ["transform-async-to-generator"]
+  "presets": ["es2015", "stage-0"],
+  "plugins": ["transform-async-to-generator", "babel-plugin-transform-runtime"]
 }
