--- a/package.json
+++ b/package.json
@@ -4,16 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --watch ./ --exec 'babel-node index'"
+    "start": "./node_modules/.bin/nodemon --watch ./ --exec 'babel-node index'",
+    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha $(find src -name '*.spec.js') ./test/setup.js --recursive --compilers js:babel-register --require ./test/config.js'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "nodemon": "^1.10.2"
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "sinon": "^1.17.5",
+    "supertest": "^2.0.0"
   },
   "dependencies": {
-    "rethinkdb": "^2.3.3"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "glob": "^7.0.6",
+    "rethinkdb": "^2.3.3",
+    "socket.io": "^1.4.8",
+    "winston": "^2.2.0"
   }
 }
