--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --watch ./ --exec 'babel-node index'",
-    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha $(find src -name '*.spec.js') ./test/setup.js --recursive --compilers js:babel-register --require ./test/config.js'"
+    "start": "./node_modules/.bin/nodemon --watch ./ --exec 'babel-node main'",
+    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./ --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha ./test/setup.js $(find ./api -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
   },
   "author": "",
   "license": "ISC",
